Adding file event upload feature for admin

--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -1,23 +1,24 @@
 <form [formGroup]="eventForm" (ngSubmit)="onSubmit()">
-  <label>
-    Event Name:
-    <input formControlName="eventName" type="text" />
-  </label>
-  <br />
-  <label>
-    Event Theme:
-    <input formControlName="eventTheme" type="text" />
-  </label>
-  <br />
-  <label>
-    Price:
-    <input formControlName="price" type="number" />
-  </label>
-  <br />
-  <label>
-    Images:
-    <input type="file" (change)="onFileSelected($event)" multiple />
-  </label>
-  <br />
+  <div>
+    <label for="eventName">Event Name</label>
+    <input id="eventName" formControlName="eventName" />
+  </div>
+  <div>
+    <label for="eventTheme">Event Theme</label>
+    <input id="eventTheme" formControlName="eventTheme" />
+  </div>
+  <div>
+    <label for="price">Price</label>
+    <input id="price" formControlName="price" type="number" />
+  </div>
+  <div>
+    <label for="eventImages">Event Images</label>
+    <input
+      id="eventImages"
+      type="file"
+      (change)="onFilesSelected($event)"
+      multiple
+    />
+  </div>
   <button type="submit">Submit</button>
 </form>
