Updated upload feature

--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -35,7 +35,7 @@
       <mat-label class="label">Items:</mat-label>
       <input
         matInput
-        placeholder="Baloons, flowers "
+        placeholder="Balloons, flowers "
         [(ngModel)]="selectedItems"
         name="items"
         required
