--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -14,8 +14,7 @@
         <span class="little">Starting from:</span>
         <div class="price">
           <img src="../../assets/Rupee.png" class="rupee_icon" />
-          <strong class="strong">{{ event.eventPrice }}</strong
-          >/-
+          <strong class="strong">{{ event.eventPrice }} /-</strong>
         </div>
       </div>
       <button class="btn" (click)="gotoEvent(event._id)">Know More</button>
