--- a/src/app/event/event.component.css
+++ b/src/app/event/event.component.css
@@ -3,6 +3,10 @@
   height: 100vh;
 }
 
+.eventTheme_div {
+  padding-left: 0.3rem;
+}
+
 .heading {
   font-family: "Playwrite PL", cursive;
   font-optical-sizing: auto;
@@ -12,6 +16,7 @@
   text-align: center;
   margin-top: 2.4rem;
   margin-bottom: 2.4rem;
+  font-weight: 700;
 }
 
 .grid {
@@ -39,6 +44,7 @@
 .theme {
   font-size: 1.8rem;
   /* font-weight: 500; */
+  text-align: center;
 }
 
 .price {
