--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -11,7 +11,7 @@
         <strong class="strong">{{ event.eventTheme }}</strong> Theme
       </p>
       <div class="price_div">
-        <span class="little">Starting from:</span>
+        <span class="little">From</span>
         <div class="price">
           <img src="../../assets/Rupee.png" class="rupee_icon" />
           <strong class="strong">{{ event.eventPrice }} /-</strong>
